--- a/index.html
+++ b/index.html
@@ -81,19 +81,23 @@
         </section>
 
         <section id="about" class="py-5 bg-light">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h2>ABOUT US</h2>
-                        <p>We specialise in creating beautiful and original cakes, cupcakes, macarons and other delicious baked goods for all kinds of occasions, including birthdays, corporate events, and weddings.</p>
-                        <button class="btn btn-outline-dark">READ MORE</button>
-                    </div>
-                    <div class="col-lg-6">
-                        <img src="images (2).jpg" class="img-fluid rounded shadow" alt="About Us Team">
-                    </div>
-                </div>
+    <div class="container">
+        <div class="row align-items-center g-4">
+            <div class="col-12 col-lg-6 text-center text-lg-start">
+                <h2>ABOUT US</h2>
+                <p>
+                    We specialise in creating beautiful and original cakes, cupcakes, macarons and other delicious baked goods for birthdays, corporate events and weddings.
+                </p>
+                <button class="btn btn-outline-dark">READ MORE</button>
             </div>
-        </section>
+
+            <div class="col-12 col-lg-6 text-center">
+                <img src="about.jpg" class="img-fluid rounded shadow" alt="About Us">
+            </div>
+        </div>
+    </div>
+</section>
+
 
         <section id="collection" class="py-5">
             <div class="container">
